<resources>
    <string name="app_name">GeoWord</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="hint_title">Does your story have a title?</string>
    <string name="hint_name">Name of someone involved?</string>
    <string name="hint_desc">What is the story?</string>
    <string name="item_logout">Logout</string>
    <string name="nav_header_desc">description</string>
    <string name="nav_header_title">title</string>
    <string name="nav_header_subtitle">subtitle</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="todo">TODO</string>
    <string name="register_hint_name">Enter your name (optional)</string>
    <string name="action_register">REGISTER</string>
    <string name="register_login">Login</string>
    <string name="login_register">Register</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_friend">Add Friend</string>
    <string name="title_group">Add Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_friends_list">Friends List</string>
    <string name="item_map">Navigate Map</string>
    <string name="hint_addemail">Enter email</string>
    <string name="friend_title">Add a friend</string>
    <string name="group_title">Add a Group</string>
    <string name="group_share">Share with:</string>
    <string name="group_public">Public</string>
    <string name="group_friends">Friends</string>
    <string name="hint_group">Enter group name</string>
    <string name="group_required">Group name is required</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="title_activity_register">Register</string>
    <string name="hint_location">Show Where You Are</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_note">Create Note</string>
    <string name="hint_low_bandwidth">Use local storage for database</string>
</resources>
