<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AddGroupFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
    <TextView
            android:id="@+id/group_title"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/group_title"/>


        <EditText
                android:text=""
                android:textSize="12sp"
                android:textColor="@color/black"
                android:hint="@string/hint_group"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_margin"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:id="@+id/group_etName"
                android:inputType="text"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="@dimen/activity_margin"
                  android:text="@string/group_share"
        />
        <RadioGroup
                android:id="@+id/group_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_margin"
        android:orientation="vertical">
            <RadioButton
                    android:text="@string/group_public"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioPublic"/>
            <RadioButton
                    android:text="@string/group_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioFriend"/>
        </RadioGroup>

    </LinearLayout>
    <ListView
            android:id="@+id/listViewGroupFriendsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    android:visibility="gone">

    </ListView>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" tools:layout_editor_absoluteY="659dp"
            tools:layout_editor_absoluteX="347dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</FrameLayout>