<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoryActivity">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/story_appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_margin"
                android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/story_toolbar"
                app:title="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>
        </LinearLayout>
        <ScrollView android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">
                    <EditText
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:hint="@string/hint_title"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/activity_margin"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextTitle"/>
                    <EditText
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:hint="@string/hint_name"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/activity_margin"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextName"/>
                    <EditText
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="12sp"
                        android:hint="@string/hint_desc"
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/activity_margin"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextDescription"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_imageGallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView android:id="@+id/story_ivNewImage"
                       android:layout_width="120dp"
                       android:layout_height="120dp"
                       app:srcCompat="@drawable/ic_add_a_photo_black_24dp"/>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" tools:layout_editor_absoluteY="659dp"
            tools:layout_editor_absoluteX="347dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.design.widget.CoordinatorLayout>
